# FreeRDP-WebConnect

./: .gitignore  CMakeLists.txt
wsgate/: CMakeLists.txt  Primary.cpp  Primary.hpp  RDP.cpp  RDP.hpp  Update.cpp  Update.hpp  btexception.cpp  btexception.hpp  lib_freerdp_helper.cpp  lib_freerdp_helper.hpp  lib_wshandler.cpp  lib_wshandler.hpp  libwsgate.cpp  libwsgate.hpp  logging.cpp  rdpcommon.hpp  wsgate.hpp
